# pygame_gui

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  lgtm.yml  pytest.ini  readthedocs.yaml  requirements.txt  setup.cfg  setup.py  travis.yml  ui_manager.py
.github/ISSUE_TEMPLATE/: blank-template.md  bug_report.md  feature_request.md
.github/workflows/: basic_test.yml  pythonpackage.yml  run_tests_ci.yml
core/: ui_appearance_theme.py  ui_container.py  ui_element.py  ui_window.py  ui_window_stack.py
docs/: requirements.txt
docs/source/: change_list.rst  code.rst  conf.py  events.rst  freezing.rst  index.rst  layout_guide.rst  localization.rst  modules.rst  pygame_gui.core.drawable_shapes.rst  pygame_gui.core.interfaces.rst  pygame_gui.rst  (+8 more)
elements/: ui_button.py  ui_drop_down_menu.py  ui_horizontal_slider.py  ui_image.py  ui_label.py  ui_screen_space_health_bar.py  ui_text_box.py  ui_text_entry_line.py  ui_tool_tip.py  ui_vertical_scroll_bar.py  ui_world_space_health_bar.py
pygame_gui/: __init__.py  _constants.py  ui_manager.py
tests/: conftest.py  gui_test.py  gui_test2.py  shared_comparators.py  shared_fixtures.py  test_constants.py  test_deprecations.py  test_pyinstaller_hook.py  test_ui_button.py  test_ui_drop_down_menu.py  test_ui_horizontal_slider.py  test_ui_image.py  test_ui_label.py  test_ui_manager.py  test_ui_message_window.py  test_ui_text_box.py  test_ui_text_entry_line.py  test_ui_tool_tip.py  test_ui_vertical_scroll_bar.py  test_ui_world_space_health_bar.py
windows/: ui_message_window.py
(+269 files in other folders)
