# Inside of setup.cfg
[metadata]
description-file = README.md
[flake8]
max-line-length = 100
[pylint]
extension-pkg-whitelist=pygame
disable=no-else-return,too-many-instance-attributes,too-many-branches,too-many-arguments,too-many-public-methods,too-many-nested-blocks,missing-module-docstring,too-few-public-methods,fixme,duplicate-code