# Inside of setup.cfg
[metadata]
description_file = README.md
[flake8]
max-line-length = 120
[pylint.MESSAGES CONTROL]
extension-pkg-whitelist=pygame
disable=no-else-return,too-many-instance-attributes,too-many-ancestors,too-many-return-statements,too-many-boolean-expressions,too-many-branches,too-many-arguments,too-many-statements,too-many-locals,too-many-lines,too-many-positional-arguments,too-many-public-methods,too-many-nested-blocks,missing-module-docstring,too-few-public-methods,fixme,duplicate-code
[pylint.FORMAT]
max-line-length = 120
max-module-lines=1500

[options.entry_points]
pyinstaller40 =
	hook-dirs = pygame_gui.__pyinstaller:get_hook_dirs